Merge from AAC-129